--- a/EmoBuzz/war/emobuzzlogin.html
+++ b/EmoBuzz/war/emobuzzlogin.html
@@ -10,7 +10,7 @@
 	<div class="container">&nbsp;</div>
 	<div class="pagination-centered">
 		<div>
-			<form class="form-horizontal" action="/demo1.jsp" method="get" onsubmit="return ebValidate();">
+			<form class="form-horizontal" method="get" onsubmit="return ebValidate();">
 				<div class="control-group">
 					<div class="controls" style="margin: 0;">
 						<input type="email" id="emailId" class="input" name="email" placeholder="Email">
